--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     border:border-box;
     
 }
-/*.navbar{
+.navbar{
     height:60px;
     background-color:#0f1111;
     color:white;
@@ -148,7 +148,7 @@ span{
     background-color:#e2e7e6;
 }
 .box{
-    /* border:2px solid black; 
+     border:2px solid black; 
     height:400px;
     width:23%;
     background-color:white;
@@ -231,4 +231,4 @@ ul a{
 }
 .copyright{
     padding-top:5px;
-     }*/
+     }
